--- a/css/main.css
+++ b/css/main.css
@@ -150,12 +150,6 @@ a:after {
 	font-size: 25px;
 }
 
-#langue {
-  float: right;
-  width: 10em;
-  height: 2em;
-  margin-top: 20px;
-}
 /*---------------------------------------------------
 	SECTION WRAPS
 ---------------------------------------------------*/
@@ -202,6 +196,19 @@ a:after {
 
 #headerwrap a:hover {
 	color: orange;
+}
+
+#langue {
+  float: left;
+  margin-top: -8em;
+}
+
+#langue a {
+  color: white;
+}
+
+#langue a {
+  color: white;
 }
 
 /* Intnro Wrap */
@@ -331,4 +338,10 @@ textarea {
 #logobootstrap,
 #logogimp {
   width: 50%;
+}
+
+@media all and (max-width:316px) {
+  #langue {
+    margin-top: -4em;
+  }
 }
