--- a/css/main.css
+++ b/css/main.css
@@ -109,12 +109,7 @@ a:after {
 	position: relative;
 	margin: 0;
 	padding: 0;
-
 	border-right: 1px solid #222;
-
-	/* For IE, the outcast */
-	zoom:1;
-	*display: inline;
 }
 
 #section-topbar ul#nav > li {
@@ -160,7 +155,7 @@ a:after {
 	margin-top: 60px;
 	padding-top:140px;
 	text-align:center;
-	background-attachment: relative;
+	background-attachment: scroll;
 	background-position: center center;
 	min-height: 500px;
 	width: 100%;
@@ -198,17 +193,18 @@ a:after {
 	color: orange;
 }
 
-#langue {
-  float: left;
+#lang {
   margin-top: -8em;
+  position: fixed;
 }
 
-#langue a {
+#lang a {
   color: white;
+  font-size: 1.3em;
 }
 
-#langue a {
-  color: white;
+#lang a:hover {
+  color: red;
 }
 
 /* Intnro Wrap */
@@ -296,6 +292,12 @@ sm {
 	font-size: 12px;
 }
 
+/*skills*/
+
+.logo {
+  width: 50%;
+}
+
 /*Form*/
 
 legend {
@@ -330,18 +332,10 @@ textarea {
   background-color: #c9ffe7;
 }
 
-/*skills*/
-
-#logohtml,
-#logocss,
-#logojs,
-#logobootstrap,
-#logogimp {
-  width: 50%;
-}
+/*media queries*/
 
 @media all and (max-width:316px) {
-  #langue {
+  #lang {
     margin-top: -4em;
   }
 }
