--- a/css/main.css
+++ b/css/main.css
@@ -318,38 +318,12 @@ sm {
   width: 100%;
 }
 
-/*Form*/
-
-legend {
-  color: white;
-  font: normal 16px/24px  'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: capitalize;
-}
-
-textarea {
-  width: 100%;
-  height: 5em;
-}
-
-.txtcontact {
-  margin-bottom: 0.5em;
-  background-color: #c9ffe7;
-}
-
-.txtcontact:focus {
-  background-color: #f2f2f2;
-}
-
-.buttons {
-  color: white;
+/*Contact*/
+button {
   background-color: #2c405d;
-  width: 25%;
-  margin-left: 12.5%;
-}
-
-.buttons:hover {
-  color: black;
-  background-color: #c9ffe7;
+  color: white;
+  border: 2px solid #DEFFF1;
+  padding: 1em;
 }
 
 /*media queries*/
